# DprgArchiveAgent

./: .env.example  .gitignore  CONTRIBUTORS.md  EXAMPLES.md  README.md  codingplan.md  convert_encoding.py  models_temp.py  models_temp2.py  models_temp3.py  pyproject.toml  pytest.ini  requirements.txt
Challenges/: officer_search.py  president_search.py  top_references.py
data/: documents.json
docs/: api_reference.md  api_usage.md  cli_usage.md  code_style_guide.md  contributing.md  deployment_guide.md  development_guide.md  examples.md  index.md  monitoring.md  security_and_performance_examples.md  setup_and_configuration.md  test_coverage.md  testing.md  wordpress_integration.md
docs/prerequisites/: git_setup.md  openai_setup.md  pinecone_setup.md  python_setup.md  rust_setup.md
scripts/: check_null_bytes.py  check_pinecone.py  check_tests.py  debug_cli.py  get_hex.ps1  load_data.py  test_rag.py
src/: api.py  cli.py  config.py
src/agent/: archive_agent.py
src/schema/: models.py
src/tools/: chat_tool.py  search_tool.py
src/utils/: embeddings.py  openai_client.py  vector_store.py
tests/: conftest.py  requirements-test.txt  test_api.py  test_archive_agent.py  test_chat_tool.py  test_cli.py  test_embeddings.py  test_metadata_filters.py  test_search_results.py  test_search_tool.py  test_vector_store.py
